# Lyric-Classifier

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
src/: classification.py  cluster_docs.py  extract_topics.py  feature_engineer.py  main.ipynb  main.py  nn.py  preprocess.py  train_nn_script.py  train_topic_modeller_script.py
src/utils/: constants.py  logger.py  utils.py
